Team Stats Grabber
Initial work on teamStatsGrabber function

--- a/team_stats.Rmd
+++ b/team_stats.Rmd
@@ -6,6 +6,7 @@ output: html_notebook
 # Get Basic team data
 
 ```{r}
+library(dplyr)
 teamCode <- "mavericks"
 teams_list %>% filter(TEAM_CODE == teamCode) %>% mutate_if(is.factor, as.character) -> basicTeamInfo; basicTeamInfo
 
@@ -13,7 +14,6 @@ teams_list %>% filter(TEAM_CODE == teamCode) %>% mutate_if(is.factor, as.charact
 
 # Get season Stats
 ```{r}
-url <- urlBuilder(statCat = "teamdashboardbygeneralsplits", TeamID = basicTeamInfo %>% select(TEAM_ID), m)
-fromJson_workaround()
+getTeamSeasonStats(parameters = list(TeamID = basicTeamInfo %>% select(TEAM_ID)))
 ```
 
