--- a/team_stats.Rmd
+++ b/team_stats.Rmd
@@ -23,6 +23,9 @@ getTeamSeasonStats(parameters = list(TeamID = basicTeamInfo %>% select(TEAM_ID),
 ```{r}
 seasons <- c("2016-17", "2015-16", "2014-15", "2013-14", "2012-13", "2011-12", "2010-11", "2009-10", "2008-09", "2007-08")
 teamDF <- create_TeamSeasonDF(basicTeamInfo %>% select(TEAM_ID), seasons = seasons); teamDF
+
+head(allteamsDF)
+head(allteamsDF$warriors)
 ```
 
 
